--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,8 +8,8 @@
 {% block content %}
 replace me
 {% endblock content %}
-{% block practice %}
+{% comment %} {% block practice %}
     Test
-{% endblock practice %}
+{% endblock practice %} {% endcomment %}
 </body>
 </html>
