--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -3,4 +3,17 @@
 {% block content %}
 <h1>About</h1>
 <p>this is a templates</p>
+
+<p>
+{{my_text}},{{my_number}}
+</p>
+<ul>
+{% for item in my_list %}
+{% if item == 312 %}
+    <li>{{forloop.counter}}-{{item |add:22}} </li>
+{% else %}
+    <li>{{forloop.counter}}-{{item}} </li>
+{% endif %}
+{% endfor %}
+</ul>
 {% endblock content %}
